# BlackHoles

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  start.sh
backend/: pyproject.toml
backend/src/: catalog.py  evolution.py  orbits.py  server.py  simcache.py  waveforms.py
backend/tests/: test_audio_sync.py  test_client_audio.py  test_evolution.py  test_lensing_monotonicity.py
frontend/: index.html  package-lock.json  package.json
frontend/public/preloaded/: catalog.json
frontend/public/preloaded/SXS_BBH_0177/: evolution.json  metadata.json  trajectories.json  waveform.json
frontend/public/preloaded/SXS_BBH_0178/: evolution.json  metadata.json  trajectories.json  waveform.json
frontend/public/preloaded/SXS_BBH_0204/: evolution.json  metadata.json  trajectories.json  waveform.json
frontend/public/preloaded/SXS_BBH_0304/: evolution.json  metadata.json  trajectories.json  waveform.json
frontend/public/preloaded/SXS_BBH_0324/: evolution.json  metadata.json  trajectories.json  waveform.json
frontend/public/preloaded/SXS_BBH_0501/: evolution.json  metadata.json  trajectories.json  waveform.json
frontend/public/preloaded/SXS_BBH_0528/: evolution.json  metadata.json  trajectories.json  waveform.json
frontend/public/preloaded/SXS_BBH_0811/: evolution.json  metadata.json  (+2 more)
frontend/src/: api.js  main.js  style.css
frontend/src/dashboard/: catalog.js
frontend/src/scene/: blackholes.js  lensing.js  merger.js  mesh.js  stars.js
frontend/src/ui/: controls.js
frontend/src/waveform/: audio.js  evolution.js  plot.js
scripts/: generate_static.py
(+188 files in other folders)
