[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "sxs>=2025.0.12",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
